--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -9,6 +9,8 @@
 @script = {
     <script>
     $(document).ready(function(){
+        var form = $(".form-multistep");
+
         var formValRules = {
             ignore:":not(:visible)",
             rules: {
@@ -29,10 +31,19 @@
             }
         };
 
+        $.validator.addMethod("myRequired", $.validator.methods.required, '@{Messages("event.edit.add.date.validation.required")}');
+        $.validator.addMethod("myDateTime", function (value, element) {
+            var stamp = value.split(" ");
+            var validDate = !/Invalid|NaN/.test(new Date(stamp[0]).toString());
+            var validTime = /^(([0-1]?[0-9])|([2][0-3])):([0-5]?[0-9])(:([0-5]?[0-9]))?$/i.test(stamp[1]);
+            return this.optional(element) || (validDate && validTime);
+        }, '@{Messages("event.edit.add.date.validation.format")}');
+
+        //$.validator.addMethod("mydateISO", $.validator.methods.dateISO, '@{Messages("event.edit.add.date.validation.format")}');
+
         var dateRules = {
-            required: true,
-            dateISO: true,
-            messages: '@{Messages("event.edit.add.date.validation")}'
+            myRequired: true,
+            myDateTime: true
         };
 
         var dateTimePickerOptions = {
@@ -44,13 +55,13 @@
 
         $(".date input[type=datetime]").datetimepicker(dateTimePickerOptions);
         $(".remove-button").on("click", removeDate);
-        $(".add-more-dates").on("click", {dateTimePickerOptions: dateTimePickerOptions, dateRules: dateRules }, cloneDate);
+        $(".add-more-dates").on("click", {dateTimePickerOptions: dateTimePickerOptions, stepsForm: form }, cloneDate);
 
-        initMultiForm(formValRules, dateRules);
+        initMultiForm(form, formValRules, dateRules);
 
     });
 
-    function cloneDate(event, dateTimePickerOptions, dateRules){
+    function cloneDate(event, dateTimePickerOptions, stepsForm){
        var $dateContainer = $("#date-container");
        var $dateClone = $("#orig-date-group").clone();
        var nrOfDates = $dateContainer.children().length;
@@ -60,18 +71,20 @@
         oldHTML = oldHTML.replace(/value\=\"._\"/gi, "value=\"\"");
         return oldHTML.replace(/0/gi, nrOfDates);
        });
-       $dateClone.addClass('big-margin');
-       $dateClone.find("input[type=datetime]").datetimepicker(dateTimePickerOptions);
+       $dateClone.addClass("margin-top");
+       $dateClone.find("input[type=datetime]").datetimepicker(event.data.dateTimePickerOptions);
        $dateClone.find(".remove-button").removeClass("hidden").on("click", removeDate);
        $dateContainer.append($dateClone);
+       event.data.stepsForm.validate().resetForm();
+       /*
        $dateContainer.find(".date-input").each(function() {
             $(this).rules("remove").rules("add", dateRules);
        });
+       */
     }
 
     function removeDate(){
-        var $this = $(this);
-        var $parent = $this.closest(".input-group.date");
+        var $parent = $(this).closest(".input-group.date");
         // TODO add check for if people has booked
         if($parent.find(".guestsbooked").attr("value") > 0){
             alert("@Messages("event.edit.add.date-time.remove-date.guests-booked")");
@@ -113,13 +126,29 @@
 
                         <div class="step">
                             <div class="row">
-                                <div id="date-container" class="col-xs-12 col-md-4">
+                                <div id="date-container" class="form-inline">
                                     @helper.repeat(field = eventForm("eventDates"), min = 1) { eventDatesField =>
-                                        <div id="orig-date-group" class="input-group date">
-                                            @b3.datetime(eventDatesField("date"), 'class -> "date-input", '_label -> Html("<span class=\"glyphicon glyphicon-calendar\"></span>&nbsp;" + Messages("event.edit.add.date")), '_help -> Messages("event.edit.add.date.help"), '_error -> Messages("event.edit.add.date.validation"), '_class -> "date")
-                                            @helper.inputHidden(eventDatesField("id"))
-                                            @helper.inputHidden(eventDatesField("guestsbooked"), '_class -> "guestsbooked")
-                                            @b3.button('class -> "remove-button btn btn-danger hidden", '_title -> Messages("event.edit.add.date-time.remove-date")){ <span class="glyphicon glyphicon-remove"></span> }
+                                        <div id="orig-date-group">
+                                            <div class="input-group date">
+                                                <div class="input-group-addon">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                </div>
+                                                @b3.datetime(eventDatesField("date"), 'class -> "date-input", 'placeholder -> Messages("event.edit.add.date.validation.format"), '_hiddenLabel -> Messages("event.edit.add.date"), '_error -> Messages("event.edit.add.date.validation"), '_class -> "date")
+                                                <div class="input-group-btn">
+                                                    <a class="remove-button hidden" title="@Messages("event.edit.add.date-time.remove-date")"><span class="glyphicon glyphicon-remove"></span></a>
+                                                </div>
+                                                @helper.inputHidden(eventDatesField("id"))
+                                                @helper.inputHidden(eventDatesField("guestsbooked"), '_class -> "guestsbooked")
+                                                @{
+    /*
+                                                    @b3.button('class -> "remove-button btn btn-danger hidden", '_title -> Messages("event.edit.add.date-time.remove-date")) {
+                                                            <span class="glyphicon glyphicon-remove"></span>
+                                                    }
+                                                    */
+                                                }
+
+                                            </div>
+
                                         </div>
                                     }
                                 </div>
@@ -130,7 +159,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-6">
+                                <div class="col-xs-12">
                                     @b3.button('id -> "add-more-dates", 'class -> "btn btn-default add-more-dates"){ <span class="glyphicon glyphicon-plus"></span> @Messages("event.edit.add.date-time.add-date") }
                                 </div>
                             </div>
