Reworked dates, still not functional

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -516,7 +516,6 @@ input[type="reset"]:hover
 
 
 
-
 // Host levels / grade / rating
 .host-level-icon
 {
@@ -710,6 +709,11 @@ input[type="reset"]:hover
 }
 .btn-rate-popover.collapsed span.glyphicon-chevron-down {
   display: inline-block;
+}
+
+// Events
+.input-group .remove-button {
+  margin:0px 10px 0px 10px;
 }
 
 
