- Date support events

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -715,6 +715,9 @@ input[type="reset"]:hover
 .input-group .remove-button {
   margin:0px 10px 0px 10px;
 }
+.event-guest-info {
+  border-bottom: 1px solid @hdc-light-gray;
+}
 
 
 // Request popover
