--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -155,11 +155,11 @@
                                     <h3>@Messages("event.edit.add.date-time.header.date")</h3>
                                 </div>
                             </div>
-                            <div class="row margin-top">
+                            <div class="row">
                                 <div id="date-container" class="col-xs-12 form-inline">
                                     @helper.repeat(field = eventForm("eventDates"), min = 1) { eventDatesField =>
                                         <div id="orig-date-group" class="date-row">
-                                            @b3.inputWrapped("date", eventDatesField("date"), 'class -> "date-input", 'placeholder -> Messages("event.edit.add.date.validation.format"), '_hiddenLabel -> Messages("event.edit.add.date"), '_error -> Messages("event.edit.add.date.validation.format"), '_class -> "date") { input =>
+                                            @b3.inputWrapped("date", eventDatesField("date"), 'class -> "date-input", 'disabled -> eventDatesField("guestsbooked").value.getOrElse(false), 'placeholder -> Messages("event.edit.add.date.validation.format"), '_hiddenLabel -> Messages("event.edit.add.date"), '_error -> Messages("event.edit.add.date.validation.format"), '_class -> "date") { input =>
                                                 <div class="input-group">
                                                     <div class="input-group-addon">
                                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -167,7 +167,7 @@
                                                     @input
                                                 </div>
                                             }
-                                            @b3.inputWrapped("time", eventDatesField("time"), 'class -> "time-input", 'placeholder -> Messages("event.edit.add.time.validation.format"), '_hiddenLabel -> Messages("event.edit.add.time"), '_error -> Messages("event.edit.add.time.validation.format"), '_class -> "time") { input =>
+                                            @b3.inputWrapped("time", eventDatesField("time"), 'class -> "time-input", 'disabled -> eventDatesField("guestsbooked").value.getOrElse(false), 'placeholder -> Messages("event.edit.add.time.validation.format"), '_hiddenLabel -> Messages("event.edit.add.time"), '_error -> Messages("event.edit.add.time.validation.format"), '_class -> "time") { input =>
                                                 <div class="input-group">
                                                     <div class="input-group-addon">
                                                         <span class="glyphicon glyphicon-time"></span>
@@ -181,10 +181,15 @@
                                             </div>
                                         </div>
 
-                                        <div>
-                                            <h3>@Messages("event.edit.add.date-time.header.booked-guests")</h3>
-                                            @Messages("event.edit.add.date-time.booked-guests-label", eventDatesField("guestsbooked").value.getOrElse(0))
+                                        <div class="event-guest-info margin-bottom">
+                                            @if(customUtils.Helpers.toInt(eventDatesField("guestsbooked").value) > 0){
+                                                <strong>@Messages("event.edit.add.date-time.header.booked-guests")</strong>
+                                                @Messages("event.edit.add.date-time.booked-guests-label", eventDatesField("guestsbooked").value.getOrElse(0).toString)<br>
+                                                @Messages("event.edit.add.date-time.booked-guests-info")
+                                            }
                                             @helper.inputHidden(eventDatesField("id"))
+
+                                            @b3.hidden(eventDatesField("guestsbooked").name, eventDatesField("guestsbooked").value.getOrElse(0), 'class -> "guestsbooked")
                                             @helper.inputHidden(eventDatesField("guestsbooked"), '_class -> "guestsbooked")
                                         </div>
                                     }
@@ -192,12 +197,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <div class="margin-top">@Html(Messages("event.edit.add.date-time.help-text"))</div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    @b3.button('id -> "add-more-dates", 'class -> "btn btn-default add-more-dates"){ <span class="glyphicon glyphicon-plus"></span> @Messages("event.edit.add.date-time.add-date") }
+                                    @b3.button('id -> "add-more-dates", 'class -> "btn btn-default btn-warning add-more-dates"){ <span class="glyphicon glyphicon-plus"></span> @Messages("event.edit.add.date-time.add-date") }
                                 </div>
                             </div>
                         </div>
