- Fix for editing recipes - Support to edit Events

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -430,7 +430,6 @@ input[type="reset"]:hover
   color: #fff;
 }
 
-
 .btn-close {
   position: absolute;
   height: 15px;
@@ -441,6 +440,14 @@ input[type="reset"]:hover
   padding: 0;
   top: 0;
 }
+
+.btn-margin-left {
+  margin-left:6px;
+}
+.btn-margin-right {
+  margin-right:6px;
+}
+
 
 // Rows
 .row-border-bottom {
@@ -709,6 +716,13 @@ input[type="reset"]:hover
 }
 .btn-rate-popover.collapsed span.glyphicon-chevron-down {
   display: inline-block;
+}
+
+// Multiple step form
+.step {
+  margin-bottom:20px;
+  border-bottom: 1px solid @hdc-orange;
+  padding-bottom:20px;
 }
 
 // Events
