Bug in Messages views, rendering Error-spans when there is no error

--- a/app/views/helper/inputTextHorizontal.scala.html
+++ b/app/views/helper/inputTextHorizontal.scala.html
@@ -16,7 +16,9 @@
             id="@field.id"
             @readonly
             name="@field.name" @play.api.templates.PlayMagic.toHtmlArgs(htmlArgs) >@field.value.getOrElse("")</textarea>
-            <span class="has-error">@{field.error.map { error => error.message }}</span>
+            @if(field.hasErrors) {
+                <span class="has-error">@{ field.error.map { error => error.message }}</span>
+            }
         </div>
     </div>
 } else {
@@ -28,7 +30,9 @@
             id="@field.id"
             name="@field.name"
             value="@field.value.getOrElse("")" @play.api.templates.PlayMagic.toHtmlArgs(htmlArgs) @readonly >
-            <span class="has-error">@{field.error.map { error => error.message }}</span>
+            @if(field.hasErrors) {
+                <span class="has-error"> @{field.error.map { error => error.message }}</span>
+            }
         </div>
     </div>
 }
