Bug in validation for events

--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -90,7 +90,7 @@
         }else{
             hideMultiFormItems();
         }
-        activateValidation(formValRules, dateRules, timeRules);
+        activateValidation(form, formValRules, dateRules, timeRules);
     });
 
     function cloneDate(event, dateTimePickerOptions, stepsForm){
